--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,9 @@ div.main /* Class for the main body of the webpage*/
 {
     background-color: rgba(255, 255, 255, 0.7);
     margin: auto;
-    overflow: auto;
+    overflow-y: scroll;
     width: 90%;
+    height: 70%
 
 }
 table.navlayout
