--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,14 @@ div.main /* Class for the main body of the webpage*/
     height: 80%
 
 }
+div.benefits 
+{
+    background-color: rgba(201,118,29,.9);
+    margin: auto;
+    width: 70%;
+    line-height: 170%;
+
+}
 table.navlayout
 {
     font-family: Montserrat;
@@ -46,4 +54,11 @@ tr.navRow
 {
     padding-bottom: 5em;
     padding-top: 5em;
+}
+font.benefitHeading
+{
+    color: #185c5d;
+    font-size: 60;
+    font-weight: 1200;
+    text-align: left;
 }
