--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ font.pageFont
 }
 td.navhead
 {
-    font-size: 140%;
+    font-size: 80%;
     padding-bottom: 0.5em;
     padding-top: 0.5em;
 }
@@ -46,4 +46,69 @@ tr.navRow
 {
     padding-bottom: 5em;
     padding-top: 5em;
+}
+/* Dropdown Button */
+.dropbtn 
+{
+    background-color:  rgba(0, 203, 255, 0.0);
+    color: black;
+    padding: 16px;
+    font-family: Montserrat;
+    font-size: 16px;
+    border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown 
+{
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content 
+{
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a 
+{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover 
+{
+    background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content 
+{
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+button:hover
+{
+    background-color: rgba(255, 255, 255, 0.7);
+}
+a:link
+{
+    text-decoration: none;
+    color: black;
+}
+a:visited
+{
+    text-decoration: none;
+    color: black;
 }
